# bazel-kuzu-cgo-example

./: .gitignore  BUILD.bazel  MODULE.bazel  go.mod  go.sum  main.go
patches/: kuzu-bazel.patch
